--- a/LoginApp/app/src/main/res/menu/menu_main.xml
+++ b/LoginApp/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/menu_refresh"
+        android:title="menu_refresh"
+        android:checkable="false"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_scan"
+        android:title="@string/menu_scan"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom|withText"/>
+    <item android:id="@+id/menu_stop"
+        android:title="@string/menu_stop"
+        android:orderInCategory="101"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
