--- a/LoginApp/app/src/main/res/layout/activity_main.xml
+++ b/LoginApp/app/src/main/res/layout/activity_main.xml
@@ -28,23 +28,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout style="@style/Widget.SampleMessageTile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <Button
+        android:id="@+id/buttonDeleteData"
+        android:text="Delete All Data"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
-        <TextView style="@style/Widget.SampleMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/horizontal_page_margin"
-            android:layout_marginRight="@dimen/horizontal_page_margin"
-            android:layout_marginTop="@dimen/vertical_page_margin"
-            android:layout_marginBottom="@dimen/vertical_page_margin"
-            android:text="@string/intro_message" />
-    </LinearLayout>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView" />
 </LinearLayout>
