--- a/LoginApp/app/src/main/res/layout/activity_view_past_entries.xml
+++ b/LoginApp/app/src/main/res/layout/activity_view_past_entries.xml
@@ -9,16 +9,21 @@
 
     <Button
         android:id="@+id/buttonViewGames"
-        android:text="View Games"
+        android:text="View All Games"
         android:onClick=""
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/buttonViewEntries"
-        android:text="View Entries"
+        android:text="View All Entries"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/buttonViewEntry"
+        android:text="View Single Entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
