--- a/LoginApp/app/src/main/res/layout/gatt_services_characteristics.xml
+++ b/LoginApp/app/src/main/res/layout/gatt_services_characteristics.xml
@@ -54,4 +54,9 @@
     <ExpandableListView android:id="@+id/gatt_services_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/buttonFire"
+        android:text="Fire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
