--- a/LoginApp/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/LoginApp/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -1,12 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.eli.loginapp.admin_home_screen">
-
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/buttonAdminDeleteGame"
+        android:text="Delete Game"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <EditText
+        android:id="@+id/editTextDeleteGame"
+        android:text="Game NAME To Delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/buttonAdminDeleteEntry"
+        android:text="Delete Entry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/editTextDeleteEntry"
+        android:text="Entry ID Number To Delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/buttonAdminDeleteUser"
+        android:text="Delete User"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/editTextDeleteUser"
+        android:text="User NAME To Delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
