--- a/LoginApp/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/LoginApp/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -7,33 +7,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.eli.loginapp.admin_home_screen">
     <Button
-        android:id="@+id/buttonAdminDeleteGame"
-        android:text="Delete Game"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/editTextDeleteGame"
-        android:text="Game NAME To Delete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/buttonAdminDeleteEntry"
-        android:text="Delete Entry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/editTextDeleteEntry"
-        android:text="Entry ID Number To Delete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/buttonAdminDeleteUser"
-        android:text="Delete User"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/editTextDeleteUser"
-        android:text="User NAME To Delete"
-        android:layout_width="match_parent"
+        android:id="@+id/buttonDeleteData"
+        android:text="Delete All Data"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
